# gsoc-2022-challenges

./: .gitmodules  README.md
cpp-challenge/: README.md
cpp-challenge/labyrinth-solution-2021/: CMakeLists.txt  output.txt
cpp-challenge/labyrinth-solution-2021/include/: labyrinth.h
cpp-challenge/labyrinth-solution-2021/include/gsoc/: gsoc_labyrinth.hpp
cpp-challenge/labyrinth-solution-2021/src/: gsoc_labyrinth.cpp  main.cpp
cpp-challenge/labyrinth-solution-2022/: CMakeLists.txt  build.sh  output.txt
cpp-challenge/labyrinth-solution-2022/include/: labyrinth.h
cpp-challenge/labyrinth-solution-2022/include/gsoc/: gsoc_labyrinth.hpp
cpp-challenge/labyrinth-solution-2022/src/: gsoc_labyrinth.cpp  main.cpp
python-challenge/: README.md
python-challenge/brownian-robot-solution/: main.py
robotics-academy-challenge/: README.md
robotics-academy-challenge/Solution/: main.py
robotics-academy-challenge/docker/: run
ros2-challenge/: README.md  ros2-codes
ros2-challenge/ros2-codes/: .persistent_zsh_history
ros2-challenge/ros2-codes/colcon_ws/install/: local_setup.sh  setup.sh
ros2-challenge/ros2-codes/colcon_ws/log/: latest_build
ros2-challenge/ros2-codes/colcon_ws/src/pkg_ros2_basics/: CMakeLists.txt
ros2-challenge/ros2-codes/colcon_ws/src/pkg_ros2_basics/src/: publisher_node.cpp  subscriber_node.cpp
ros2-challenge/ros2-codes/docker/: .aliases  .zshrc  build  foxy_wrapper.Dockerfile  ros2_foxy.Dockerfile  run  tb3_base.Dockerfile
ros2-challenge/ros2-codes/shared-dir/map/: tb3_world.pgm  tb3_world.yaml
(+177 files in other folders)
